--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-cli": "^1.4.0",
-    "gulp-mustache": "^3.0.0"
+    "gulp-mustache": "^3.0.0",
+    "gulp-rename": "^1.2.2"
   },
   "scripts": {
     "gulp": "gulp"
