--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "scripts": {
     "gulp": "gulp",
-    "start": "cd web-server && node server.js"
+    "start": "cd api-server && node server.js"
   },
   "dependencies": {
+    "boom": "^6.0.0",
     "hapi": "^16.6.2",
+    "joi": "^13.0.1",
     "milligram": "^1.3.0"
   }
 }
